--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        myMiradorInstance = Mirador({
          "id": "viewer",
          "layout": "1x1",
-         "buildPath": "vendor/mirador",
+         "buildPath": "vendor/mirador/",
          "data": ualibCollection,
          "windowObjects": [{
            loadedManifest: ualibCollection[0]["manifestUri"],
